changed div to 100 percent rather than 400px to fix overlapping divs

--- a/site.css
+++ b/site.css
@@ -20,7 +20,7 @@
 .leftside {
     text-align: left;
     float:left;
-    width:400px;
+    width:100%;
     padding: 10px 25px 20px 0px;
 }
 
